update animation dropdown and input

--- a/index.html
+++ b/index.html
@@ -20,36 +20,45 @@
                     <li class="link-item"><a href="">HOME</a></li>
                     <li class="link-item">
                         <a href="#">HTML & CSS</a>
-                        <i class='bx bx-chevron-down arrow-down htmlcss-arrow'></i>
+                        <i class='bx bx-chevron-down arrow arrow-down htmlcss-arrow'></i>
                         <ul class="sub-menu htmlcss-sub-menu">
-                            <li><a href="" id="">Web Design</a></li>
-                            <li><a href="" id="">Login Form</a></li>
-                            <li><a href="" id="">Card Design</a></li>
-                            <li class="more">
+                            <li class="sub-item sub-item-1"><a href="" id="">Web Design</a></li>
+                            <li class="sub-item sub-item-2"><a href="" id="">Login Form</a></li>
+                            <li class="sub-item sub-item-3"><a href="" id="">Card Design</a></li>
+                            <li class="sub-item sub-item-4 more">
                                 <a href="" id="">More</a>
                                 <i class='bx bx-chevron-right arrow htmlcss-arrow more-arrow'></i>
                                 <ul class="sub-menu more-sub-menu">
-                                    <li><a href="" id="">Dynamic Calculator</a></li>
-                                    <li><a href="" id="">Form Validation</a></li>
-                                    <li><a href="" id="">Calendar</a></li>
-                                    <li><a href="" id="">Digital Clock</a></li>
+                                    <li class="more-sub-item"><a href="" id="">Dynamic Calculator</a></li>
+                                    <li class="more-sub-item"><a href="" id="">Form Validation</a></li>
+                                    <li class="more-sub-item"><a href="" id="">Calendar</a></li>
+                                    <li class="more-sub-item"><a href="" id="">Digital Clock</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="link-item">
                         <a href="#">JAVASCRIPT</a>
-                        <i class='bx bx-chevron-down arrow-down js-arrow'></i>
+                        <i class='bx bx-chevron-down arrow arrow-down js-arrow'></i>
                         <ul class="sub-menu js-sub-menu">
-                            <li><a href="" id="">Dynamic Calculator</a></li>
-                            <li><a href="" id="">Form Validation</a></li>
-                            <li><a href="" id="">Calendar</a></li>
-                            <li><a href="" id="">Digital Clock</a></li>
+                            <li class="sub-item sub-item-1"><a href="" id="">Dynamic Calculator</a></li>
+                            <li class="sub-item sub-item-2"><a href="" id="">Form Validation</a></li>
+                            <li class="sub-item sub-item-3"><a href="" id="">Calendar</a></li>
+                            <li class="sub-item sub-item-4"><a href="" id="">Digital Clock</a></li>
                         </ul>
                     </li>
                     <li class="link-item"><a href="">ABOUT</a></li>
                     <li class="link-item"><a href="">CONTACT US</a></li>
                 </ul>
+            </div>
+            <!-- navbar-searchbox  -->
+            <div class="search-box">
+                <div class="search__container">
+                    <i class="bx bx-search"></i>
+                    <div class="input-box">
+                        <input type="text" placeholder="Search...">
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
